<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/authorization_progress_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_linear_layout"
        android:elevation="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/common_spacing"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/authorization_progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authorization_view_authorization" />

        <ProgressBar
            android:id="@+id/authorization_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/authorization_title"
        style="@style/style_title_large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:padding="@dimen/common_spacing"
        android:text="@string/app_name"
        app:drawableStartCompat="@drawable/ic_netology_48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/authorization_login_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/support_separator"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="5dp"
        android:hint="@string/authorization_view_login_hint"
        android:inputType="text|textCapSentences"
        android:maxLength="14"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authorization_title" />

    <TextView
        android:id="@+id/authorization_login_obligatory_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authorization_view_mandatory_field"
        android:textColor="@color/color_red"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/authorization_login_edit_text"
        app:layout_constraintTop_toBottomOf="@id/authorization_login_edit_text" />

    <EditText
        android:id="@+id/authorization_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/support_separator"
        android:drawableStart="@drawable/ic_key"
        android:drawablePadding="5dp"
        android:hint="@string/authorization_view_password_hint"
        android:inputType="textPassword"
        android:maxLength="20"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authorization_login_edit_text" />

    <TextView
        android:id="@+id/authorization_password_obligatory_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authorization_view_mandatory_field"
        android:textColor="@color/color_red"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/authorization_password_edit_text"
        app:layout_constraintTop_toBottomOf="@id/authorization_password_edit_text" />

    <TextView
        android:id="@+id/authorization_wrong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/authorization_view_wrong_text"
        android:textColor="@color/color_red"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/authorization_password_edit_text"
        app:layout_constraintStart_toStartOf="@id/authorization_password_edit_text"
        app:layout_constraintTop_toBottomOf="@id/authorization_password_obligatory_text" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/authorization_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="10dp"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authorization_password_edit_text" />

    <TextView
        android:id="@+id/authorization_continue_button"
        style="@style/style_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/ripple_effect"
        android:padding="@dimen/common_spacing"
        android:text="@string/authorization_view_continue"
        android:textColor="@color/color_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authorization_sign_in_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
